# CommodityPricePred

./: .gitignore  Data insight Dashboard  Home.py  main_app.py  report.md  requirements.txt
Dashboard/: dashboard.py  data_scraper.py  requirements.txt
Dashboard/download/: Daily Retail Price of Onion in All East Zone Centres, East Zone_1733753982.csv
InferenceApp/: README.md  app.py  requirements.txt
InferenceApp/models/: model_lstm_multi.keras  model_lstm_uni.keras
InferenceApp/utils/: date_features.py  model_utils.py  random.py
commodai/: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
commodai/src/commodai/: crew.py  main.py  main_prev.txt  report.md
commodai/src/commodai/config/: agents.yaml  tasks.yaml
pages/: 1_📊_Dashboard.py  2_🔮_Model_Forecast.py  3_🤖_Sentiment_Analysis.py
